--- a/vendas.html
+++ b/vendas.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página vendas</h1>
+    <h1>vendas</h1>
+    <p>Vendas = R$ 5.000,00</p>
     <a href="vendas.html">Voltar para a página de home</a>
     
 </body>
